--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "author": {
     "name": "DuyLD",
     "email": "duyld.dev@gmail.com",
-    "url": ""
+    "url": "https://medium.com/@duyld.dev"
   },
   "parameters": [
     {
